admin, cambios y conexione con BD